force-app/main/default/objects/Opportunity/fields/AtendimentoPersonalizado__c.field-meta.xml
<CustomField>
    <fullName>AtendimentoPersonalizado__c</fullName>
    <label>Atendimento personalizado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>