force-app/main/default/objects/Opportunity/fields/Aviso_enviado__c.field-meta.xml
<CustomField>
    <fullName>Aviso_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Preencher este campo se o aviso sobre cadastro dos dados da empresa no portal do Governo foi enviado.</inlineHelpText>
    <label>Aviso enviado?</label>
    <type>Checkbox</type>
</CustomField>