force-app/main/default/objects/Opportunity/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <inlineHelpText>Selecione a categoria de acordo com os critérios.</inlineHelpText>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-ciee</fullName>
            </value>
            <value>
                <fullName>e-central</fullName>
            </value>
            <value>
                <fullName>e-consult</fullName>
            </value>
            <value>
                <fullName>e-class</fullName>
            </value>
            <value>
                <fullName>e-one</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>