force-app/main/default/objects/Opportunity/fields/Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Concorrente__c</fullName>
    <label>Concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nube</fullName>
            </value>
            <value>
                <fullName>Companhia de estágio</fullName>
            </value>
            <value>
                <fullName>Espro</fullName>
            </value>
            <value>
                <fullName>Instituições de ensino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>