force-app/main/default/objects/Opportunity/fields/Cursos_Aprendizagem__c.field-meta.xml
<CustomField>
    <fullName>Cursos_Aprendizagem__c</fullName>
    <label>Cursos Aprendizagem</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Produto_Servico__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprendiz de Açougueiro</fullName>
            </value>
            <value>
                <fullName>EAD - Aprendiz de Açougueiro</fullName>
            </value>
            <value>
                <fullName>Arco Ocupações Agrícolas</fullName>
            </value>
            <value>
                <fullName>EAD - Arco Ocupações Agrícolas</fullName>
            </value>
            <value>
                <fullName>Assistente Administrativo Rural</fullName>
            </value>
            <value>
                <fullName>EAD - Assistente Administrativo Rural</fullName>
            </value>
            <value>
                <fullName>Arco Ocupações Agrícolas Polivante</fullName>
            </value>
            <value>
                <fullName>EAD - Arco Ocupações Agrícolas Polivante</fullName>
            </value>
            <value>
                <fullName>Arco Ocupações Agroindustriais</fullName>
            </value>
            <value>
                <fullName>EAD - Arco Ocupações Agroindustriais</fullName>
            </value>
            <value>
                <fullName>Indústria da Carne</fullName>
            </value>
            <value>
                <fullName>EAD - Indústria da Carne</fullName>
            </value>
            <value>
                <fullName>Mecanização Agrícola</fullName>
            </value>
            <value>
                <fullName>EAD - Mecanização Agrícola</fullName>
            </value>
            <value>
                <fullName>Auxiliar de Logística</fullName>
            </value>
            <value>
                <fullName>Operador de telemarketing</fullName>
            </value>
            <value>
                <fullName>Operador de Suporte Hardware/Software e Redes</fullName>
            </value>
            <value>
                <fullName>Múltiplas Ocupações em Administrador de Banco de Dados - Economia 4.0</fullName>
            </value>
            <value>
                <fullName>Auxiliar de Alimentação</fullName>
            </value>
            <value>
                <fullName>Comércio e Varejo</fullName>
            </value>
            <value>
                <fullName>Auxiliar de Produção</fullName>
            </value>
            <value>
                <fullName>Arco Administrativo</fullName>
            </value>
            <value>
                <fullName>Arco Bancário Adolescente 4h</fullName>
            </value>
            <value>
                <fullName>Arco Bancário Jovem 6h</fullName>
            </value>
            <value>
                <fullName>Abatedor</fullName>
                <isActive>false</isActive>
                <label>Abatedor</label>
            </value>
            <value>
                <fullName>Atendente de lanchonete</fullName>
                <isActive>false</isActive>
                <label>Atendente de lanchonete</label>
            </value>
            <value>
                <fullName>Açougueiro</fullName>
                <isActive>false</isActive>
                <label>Açougueiro</label>
            </value>
            <value>
                <fullName>Cozinheiro em geral</fullName>
                <isActive>false</isActive>
                <label>Cozinheiro em geral</label>
            </value>
            <value>
                <fullName>Cumim</fullName>
                <isActive>false</isActive>
                <label>Cumim</label>
            </value>
            <value>
                <fullName>Desossador</fullName>
                <isActive>false</isActive>
                <label>Desossador</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>