force-app/main/default/objects/Opportunity/fields/Dados_validados__c.field-meta.xml
<CustomField>
    <fullName>Dados_validados__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Preencher este campo se os dados da conta foram validados de acordo com os dados da Receita Federal.</inlineHelpText>
    <label>Dados validados na Receita Federal?</label>
    <type>Checkbox</type>
</CustomField>