force-app/main/default/objects/Opportunity/fields/Data_de_validade_da_proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_de_validade_da_proposta__c</fullName>
    <label>Data de validade da proposta</label>
    <type>Date</type>
</CustomField>