force-app/main/default/objects/Opportunity/fields/Desconto_na_CI__c.field-meta.xml
<CustomField>
    <fullName>Desconto_na_CI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar esse campo quando algum desconto na CI for concedido.</inlineHelpText>
    <label>Desconto na CI</label>
    <type>Checkbox</type>
</CustomField>