force-app/main/default/objects/Opportunity/fields/EmailDoGrupoPersonalizado__c.field-meta.xml
<CustomField>
    <fullName>EmailDoGrupoPersonalizado__c</fullName>
    <label>E-mail do grupo personalizado</label>
    <type>Email</type>
</CustomField>