force-app/main/default/objects/Opportunity/fields/Formato_de_Participa_o__c.field-meta.xml
<CustomField>
    <fullName>Formato_de_Participa_o__c</fullName>
    <label>Formato de Participação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apoiador</fullName>
            </value>
            <value>
                <fullName>Comunicação Visual</fullName>
            </value>
            <value>
                <fullName>Expositor</fullName>
            </value>
            <value>
                <fullName>Parceria</fullName>
            </value>
            <value>
                <fullName>Patrocínio</fullName>
            </value>
            <value>
                <fullName>Patrocínio Master</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>