force-app/main/default/objects/Opportunity/fields/Formul_rio_de_Contrata_o_PRD__c.field-meta.xml
<CustomField>
    <fullName>Formul_rio_de_Contrata_o_PRD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assinalar quando a empresa enviar o Formulário de Contratação preenchido</description>
    <inlineHelpText>Assinalar quando a empresa enviar o Formulário de Contratação preenchido</inlineHelpText>
    <label>Formulário de Contratação (PRD)</label>
    <type>Checkbox</type>
</CustomField>