force-app/main/default/objects/Opportunity/fields/Formul_rio_preenchido__c.field-meta.xml
<CustomField>
    <fullName>Formul_rio_preenchido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assinalar quando a empresa enviar o formulário de abertura de vagas preenchido</description>
    <inlineHelpText>Assinalar quando a empresa enviar o formulário de abertura de vagas preenchido</inlineHelpText>
    <label>Formulário de abertura de vagas</label>
    <type>Checkbox</type>
</CustomField>