force-app/main/default/objects/Opportunity/fields/GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>GrupoEconomico__c</fullName>
    <formula>Account.GrupoEconomico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo econômico</label>
    <type>Text</type>
</CustomField>