force-app/main/default/objects/Opportunity/fields/Id_kairos__c.field-meta.xml
<CustomField>
    <fullName>Id_kairos__c</fullName>
    <label>ID KAIRÓS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>