force-app/main/default/objects/Opportunity/fields/Isencao__c.field-meta.xml
<CustomField>
    <fullName>Isencao__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar esse campo quando alguma isenção de CI ou na Taxa de Matrícula for concedida.</inlineHelpText>
    <label>Isenção de CI/Taxa de Matrícula</label>
    <type>Checkbox</type>
</CustomField>