force-app/main/default/objects/Opportunity/fields/Justificativa_do_valor_da_proposta__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_do_valor_da_proposta__c</fullName>
    <label>Justificativa do(a) valor/isenção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>