force-app/main/default/objects/Opportunity/fields/Login_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Login_da_Empresa__c</fullName>
    <label>Login da Empresa</label>
    <length>30</length>
    <type>Text</type>
</CustomField>