force-app/main/default/objects/Opportunity/fields/Metragem__c.field-meta.xml
<CustomField>
    <fullName>Metragem__c</fullName>
    <label>Metragem</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>