force-app/main/default/objects/Opportunity/fields/Modalidade_da_contrata_o__c.field-meta.xml
<CustomField>
    <fullName>Modalidade_da_contrata_o__c</fullName>
    <label>Modalidade da contratação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Produto_Servico__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>EAD - Opção I</fullName>
            </value>
            <value>
                <fullName>EAD - Opção II (Economia 4.0)</fullName>
            </value>
            <value>
                <fullName>EAD - Opção III (Atividade fim)</fullName>
            </value>
            <value>
                <fullName>EAD - Opção IV</fullName>
            </value>
            <value>
                <fullName>EAD</fullName>
                <isActive>false</isActive>
                <label>EAD</label>
            </value>
            <value>
                <fullName>Nenhum</fullName>
                <isActive>false</isActive>
                <label>Nenhum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>