force-app/main/default/objects/Opportunity/fields/Motivo_de_perda_Feiras__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_perda_Feiras__c</fullName>
    <label>Motivo de perda (Feiras)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aderência ao público</fullName>
            </value>
            <value>
                <fullName>Calendário</fullName>
            </value>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>