force-app/main/default/objects/Opportunity/fields/Motivo_Stand_by__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Stand_by__c</fullName>
    <inlineHelpText>Especificar porque a oportunidade está em espera.</inlineHelpText>
    <label>Motivo - Stand by</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Inclui</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>Pandemia</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>