force-app/main/default/objects/Opportunity/fields/Motivo_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Unidade__c</fullName>
    <inlineHelpText>Especificar o motivo de encaminhamento para a Unidade.</inlineHelpText>
    <label>Motivo - Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unidade__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprendiz Capacitador (BH)</fullName>
            </value>
            <value>
                <fullName>Aprendiz Empregador</fullName>
            </value>
            <value>
                <fullName>Em contato com a Unidade</fullName>
            </value>
            <value>
                <fullName>Empresa ativa</fullName>
            </value>
            <value>
                <fullName>Empresa inativa</fullName>
            </value>
            <value>
                <fullName>Falta de retorno</fullName>
            </value>
            <value>
                <fullName>Negociação estratégica</fullName>
            </value>
            <value>
                <fullName>Orgão Público</fullName>
            </value>
            <value>
                <fullName>Pagamento Centralizado</fullName>
            </value>
            <value>
                <fullName>Parceria com outro CNPJ</fullName>
            </value>
            <value>
                <fullName>Pré-cadastro</fullName>
            </value>
            <value>
                <fullName>Visita presencial</fullName>
            </value>
            <value>
                <fullName>Convênio Aprendiz Empregador</fullName>
                <isActive>false</isActive>
                <label>Convênio Aprendiz Empregador</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>