force-app/main/default/objects/Opportunity/fields/MotivoDaPerda__c.field-meta.xml
<CustomField>
    <fullName>MotivoDaPerda__c</fullName>
    <label>Motivo da perda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aderência ao público</fullName>
            </value>
            <value>
                <fullName>Atividade incompatível com Estágio/Aprendizagem</fullName>
            </value>
            <value>
                <fullName>Calendário</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo</fullName>
            </value>
            <value>
                <fullName>Concorrencia_modelo_de_atendimento</fullName>
                <label>Concorrência - modelo de atendimento</label>
            </value>
            <value>
                <fullName>Concorrência - não identificado</fullName>
            </value>
            <value>
                <fullName>Concorrência_preco</fullName>
                <label>Concorrência - preço</label>
            </value>
            <value>
                <fullName>Contratação CLT</fullName>
            </value>
            <value>
                <fullName>Contratação direta via IE</fullName>
            </value>
            <value>
                <fullName>Contratando por outro CNPJ</fullName>
            </value>
            <value>
                <fullName>Empresa deseja contratar 100% home office</fullName>
            </value>
            <value>
                <fullName>Experiência na Expo 2020</fullName>
            </value>
            <value>
                <fullName>Falta de retorno da empresa</fullName>
            </value>
            <value>
                <fullName>Não está no momento ideal para a compra</fullName>
            </value>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>outros</fullName>
                <label>Outros</label>
            </value>
            <value>
                <fullName>Parceria fechada com Aprendiz ou Estágio</fullName>
            </value>
            <value>
                <fullName>Parceria fechada com Inclui ou One.</fullName>
            </value>
            <value>
                <fullName>Problemas anteriores</fullName>
            </value>
            <value>
                <fullName>Sem previsão de contratação</fullName>
            </value>
            <value>
                <fullName>Oportunidade duplicada</fullName>
            </value>
            <value>
                <fullName>Não temos pólo próximo</fullName>
            </value>
            <value>
                <fullName>Oportunidade em duplicidade</fullName>
            </value>
            <value>
                <fullName>CIEE não possui pólo de capacitação presencial próximo</fullName>
            </value>
            <value>
                <fullName>Empresa não deseja aguardar a validação da capacitação EAD</fullName>
            </value>
            <value>
                <fullName>Não temos turmas disponíveis em Ribeirão Preto</fullName>
            </value>
            <value>
                <fullName>Tentativas excedidas de contato</fullName>
            </value>
            <value>
                <fullName>Sem retorno da assinatura na fase Contrato DocuSign</fullName>
            </value>
            <value>
                <fullName>Empresa declinou da parceria sem justificativa</fullName>
            </value>
            <value>
                <fullName>Sem supervisão com conhecimento ou formação na área de atuação do estagiário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>