force-app/main/default/objects/Opportunity/fields/N_Pr_Cadastro__c.field-meta.xml
<CustomField>
    <fullName>N_Pr_Cadastro__c</fullName>
    <label>Nº Pré-Cadastro</label>
    <type>TextArea</type>
</CustomField>