force-app/main/default/objects/Opportunity/fields/Nome_da_Campanha__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Campanha__c</fullName>
    <label>Nome da Campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>