force-app/main/default/objects/Opportunity/fields/Observa_esOportunidade__c.field-meta.xml
<CustomField>
    <fullName>Observa_esOportunidade__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>