force-app/main/default/objects/Opportunity/fields/ObservacaoDeAtencao__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoDeAtencao__c</fullName>
    <formula>Account.ObservacaoDeAtencao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observação de atenção</label>
    <type>Text</type>
</CustomField>