force-app/main/default/objects/Opportunity/fields/Potencial_de_Vagas2__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_Vagas2__c</fullName>
    <label>Potencial de Vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>