force-app/main/default/objects/Opportunity/fields/Potencial_de_vagas_OLD__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_vagas_OLD__c</fullName>
    <label>Potencial de vagas OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>