force-app/main/default/objects/Opportunity/fields/Produto_Servico__c.field-meta.xml
<CustomField>
    <fullName>Produto_Servico__c</fullName>
    <label>Produto/Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprendiz</fullName>
            </value>
            <value>
                <fullName>Aprendiz Agronegócio Capacitador</fullName>
            </value>
            <value>
                <fullName>Aprendiz Agronegócio Empregador</fullName>
            </value>
            <value>
                <fullName>Aprendiz Capacitador</fullName>
            </value>
            <value>
                <fullName>Aprendiz Empregador</fullName>
            </value>
            <value>
                <fullName>CIEE Educação</fullName>
            </value>
            <value>
                <fullName>CIEE em Movimento</fullName>
            </value>
            <value>
                <fullName>CIEE eSports</fullName>
            </value>
            <value>
                <fullName>CIEE Global Connection (Estágio Internacional)</fullName>
            </value>
            <value>
                <fullName>CIEE Saúde</fullName>
            </value>
            <value>
                <fullName>Clube CIEE+</fullName>
            </value>
            <value>
                <fullName>Estágio</fullName>
            </value>
            <value>
                <fullName>Estágio e Aprendiz</fullName>
            </value>
            <value>
                <fullName>Estágio - Jovem Talento</fullName>
            </value>
            <value>
                <fullName>Expo</fullName>
            </value>
            <value>
                <fullName>Expo CIEE</fullName>
            </value>
            <value>
                <fullName>Festival CIEE da Diversidade</fullName>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Jornada CIEE</fullName>
            </value>
            <value>
                <fullName>Jovem Talento</fullName>
            </value>
            <value>
                <fullName>Lab CIEE</fullName>
            </value>
            <value>
                <fullName>MBA FIA</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Prêmio CIEE ESG</fullName>
            </value>
            <value>
                <fullName>Programas de Inclusão</fullName>
            </value>
            <value>
                <fullName>Somos CIEE</fullName>
            </value>
            <value>
                <fullName>Aprendiz Agro</fullName>
                <isActive>false</isActive>
                <label>Aprendiz Agro</label>
            </value>
            <value>
                <fullName>Aprendiz no Agronegócio</fullName>
                <isActive>false</isActive>
                <label>Aprendiz no Agronegócio</label>
            </value>
            <value>
                <fullName>Arco em Ocupações Agrícolas</fullName>
                <isActive>false</isActive>
                <label>Arco em Ocupações Agrícolas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>