force-app/main/default/objects/Opportunity/fields/QuantidadeDeFuncionrios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeFuncionrios__c</fullName>
    <label>Quantidade de funcionários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>