force-app/main/default/objects/Opportunity/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quente</fullName>
            </value>
            <value>
                <fullName>Morno</fullName>
            </value>
            <value>
                <fullName>Frio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>