force-app/main/default/objects/Opportunity/fields/Tipo_de_estande__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_estande__c</fullName>
    <label>Tipo de estande</label>
    <length>100</length>
    <type>Text</type>
</CustomField>