force-app/main/default/objects/Opportunity/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar este campo quando a oportunidade for encaminhada para alguma Unidade.</inlineHelpText>
    <label>Unidade</label>
    <type>Checkbox</type>
</CustomField>