force-app/main/default/objects/Opportunity/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>