force-app/main/default/objects/Opportunity/recordTypes/Atendimento_Fechada_Ganha.recordType-meta.xml
<RecordType>
    <fullName>Atendimento_Fechada_Ganha</fullName>
    <active>true</active>
    <businessProcess>Processo de vendas de Atendimento</businessProcess>
    <label>Atendimento Fechada/Ganha</label>
</RecordType>