force-app/main/default/objects/Opportunity/recordTypes/Oportunidades_Atendimento.recordType-meta.xml
<RecordType>
    <fullName>Oportunidades_Atendimento</fullName>
    <active>true</active>
    <businessProcess>Processo de vendas de Atendimento</businessProcess>
    <description>Usar para registrar oportunidades do Atendimento</description>
    <label>Oportunidades de Atendimento</label>
</RecordType>