force-app/main/default/objects/Opportunity/recordTypes/Oportunidades_de_Feiras.recordType-meta.xml
<RecordType>
    <fullName>Oportunidades_de_Feiras</fullName>
    <active>true</active>
    <businessProcess>Processo de vendas de Feiras</businessProcess>
    <description>Usar para registrar oportunidades de Feiras</description>
    <label>Oportunidades de Feiras</label>
</RecordType>