force-app/main/default/objects/Opportunity/validationRules/Atendimento_personalizado_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Atendimento_personalizado_obrigatorio</fullName>
    <active>false</active>
    <description>O campo Atendimento Personalizado deve ser obrigatório quando for uma edição de oportunidade, mas não deve ser obrigatório na criação.</description>
    <errorConditionFormula>AND( NOT(ISNEW()),			
 ISPICKVAL( AtendimentoPersonalizado__c , &quot;&quot;) 
				)</errorConditionFormula>
    <errorDisplayField>AtendimentoPersonalizado__c</errorDisplayField>
    <errorMessage>Campo obrigatório.</errorMessage>
</ValidationRule>