force-app/main/default/objects/Opportunity/validationRules/Aviso_e_Receita_Restricao.validationRule-meta.xml
<ValidationRule>
    <fullName>Aviso_e_Receita_Restricao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($Permission.Bypass_Permission = False),
AND(
RecordType.Name = &quot;Oportunidades de Atendimento&quot;,
NOT(TEXT(Produto_Servico__c)=&apos;Aprendiz&apos;),
OR(
TEXT(StageName) = &quot;Contrato DocuSign&quot;,
TEXT(StageName) = &quot;Fechado / Ganho&quot;
),
AND(
OR(
Aviso_enviado__c,
Dados_validados__c
)

)
))</errorConditionFormula>
    <errorMessage>Os Campos &quot;Dados validados na Receita Federal?&quot; e &quot;Aviso enviado?&quot; só podem ser selecionados se o produto e serviço for &quot;Aprendiz&quot;</errorMessage>
</ValidationRule>